tests/cmp/dc-label-wrong-bool-op.golden
Parse Error:
tests/cmp/dc-label-wrong-bool-op.trp:1:34 unexpected token TokenAmpersand
