tests/cmp/dc-label-wrong-bool-op.trp
let val x = 90 raisedTo `<alice && bob; charlie>`
in printWithLabels x
end